# memorable

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  CODE_REVIEW.md  FILES_FIRST_PLAN.md  KG_IMPROVEMENT.md  LICENSE  README.md  SESSION_NOTES_BRIEF.md  pyproject.toml  serve.py  viewer.html
.claude-plugin/: marketplace.json  plugin.json
commands/: memorable-search.md
hooks/: hooks.json
hooks/scripts/: pre_compact.py  session_start.py
plugin/: .mcp.json  batch_notes.py  bootstrap_kg.py  cleanup_kg.py  pyproject.toml  reprocess.py  reprocess_sessions.py  viewer.py
plugin/commands/: memorable-search.md  memorable-status.md
plugin/daemon/: com.memorable.daemon.plist  inference.py  knowledge_graph.py  memorable_daemon.py  note_generator.py  transcript_watcher.py
plugin/hooks/: hooks.json
plugin/hooks/scripts/: backfill_salience.py  post_tool_use.py  pre_compact.py  session_end.py  session_start.py  session_stop.py  user_prompt.py
plugin/oracle/: __main__.py  build_context.py  oracle_client.py
plugin/server/: __main__.py  config.py  constants.py  db.py  embeddings.py  import_sessions.py  kg.py  llm.py  mcp_server.py  nlp_extract  nlp_extract.swift  notes.py  observer.py  processor.py  summaries.py  transcript.py  watcher.py  web.py
plugin/skills/memory-management/: SKILL.md
plugin/tests/: conftest.py  test_constants.py  test_integration.py  test_notes.py  test_processor.py
plugin/ui/: CLAUDE.md  index.html  style.css  viewer.css  viewer.html
plugin/ui/js/: analytics.js  anchors.js  app.js  components.js  kg.js  notes.js  salience.js  search.js  seeds.js  sessions.js  timeline.js  utils.js
server/: __init__.py  config.py  db.py  mcp_server.py  processor.py  watcher.py
