[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "memorable"
version = "0.2.0"
description = "Persistent memory for Claude Code sessions"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Matt Kennelly"}]
dependencies = [
    "watchdog>=3.0",
    "libsql-experimental>=0.0.50",
    "gliner>=0.2",
    "numpy<2",
]

[project.optional-dependencies]
embeddings = ["sqlite-vss>=0.1"]

[project.scripts]
memorable-server = "server.__main__:main"

[tool.setuptools.packages.find]
include = ["server*"]
