[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "memorable"
version = "0.3.0"
description = "Persistent memory for Claude Code sessions — files-first architecture"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Matt Kennelly"}]
dependencies = [
    "watchdog>=3.0",
]

[project.scripts]
memorable-server = "server.__main__:main"

[tool.setuptools.packages.find]
include = ["server*"]
